--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@carrismetropolitana/go",
-    "version": "2023.10.20-1438",
+    "version": "2023.10.29-1951",
     "private": true,
     "scripts": {
         "dev": "next dev",
@@ -10,28 +10,28 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@auth/mongodb-adapter": "2.0.2",
-        "@mantine/core": "7.1.5",
-        "@mantine/dates": "7.1.5",
-        "@mantine/dropzone": "7.1.5",
-        "@mantine/form": "7.1.5",
-        "@mantine/hooks": "7.1.5",
-        "@mantine/modals": "7.1.5",
+        "@auth/mongodb-adapter": "2.0.3",
+        "@mantine/core": "7.1.7",
+        "@mantine/dates": "7.1.7",
+        "@mantine/dropzone": "7.1.7",
+        "@mantine/form": "7.1.7",
+        "@mantine/hooks": "7.1.7",
+        "@mantine/modals": "7.1.7",
         "@mantine/next": "6.0.21",
-        "@mantine/notifications": "7.1.5",
-        "@tabler/icons-react": "2.39.0",
+        "@mantine/notifications": "7.1.7",
+        "@tabler/icons-react": "2.40.0",
         "adm-zip": "0.5.10",
         "dayjs": "1.11.10",
         "formidable": "3.5.1",
         "inflected": "2.1.0",
         "lodash": "4.17.21",
-        "maplibre-gl": "3.5.1",
-        "mongodb": "6.1.0",
+        "maplibre-gl": "3.5.2",
+        "mongodb": "6.2.0",
         "mongoose": "7.6.3",
-        "next": "13.5.6",
-        "next-auth": "4.24.3",
+        "next": "14.0.0",
+        "next-auth": "4.24.4",
         "next-intl": "2.21.0",
-        "nodemailer": "6.9.6",
+        "nodemailer": "6.9.7",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-map-gl": "7.1.6",
@@ -42,14 +42,17 @@
         "yup": "1.3.2"
     },
     "devDependencies": {
-        "@types/node": "20.8.7",
-        "@types/react": "18.2.30",
+        "@types/node": "20.8.9",
+        "@types/react": "18.2.33",
         "@types/react-dom": "18.2.14",
-        "eslint": "8.51.0",
-        "eslint-config-next": "13.5.6",
+        "eslint": "8.52.0",
+        "eslint-config-next": "14.0.0",
         "postcss": "8.4.31",
         "postcss-preset-mantine": "1.9.0",
         "postcss-simple-vars": "7.0.1",
         "typescript": "5.2.2"
+    },
+    "overrides": {
+        "next": "$next"
     }
 }
