--- a/nextjs/jsconfig.json
+++ b/nextjs/jsconfig.json
@@ -6,6 +6,7 @@
     "paths": {
       "@/styles/*": ["styles/*"],
       "@/forms/*": ["forms/*"],
+      "@/assets/*": ["assets/*"],
       "@/components/*": ["components/*"],
       "@/hooks/*": ["hooks/*"],
       "@/contexts/*": ["contexts/*"],
