--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -30,7 +30,7 @@
         "mongoose": "7.6.3",
         "next": "14.0.0",
         "next-auth": "4.24.4",
-        "next-intl": "2.21.0",
+        "next-intl": "^2.21.0",
         "nodemailer": "6.9.7",
         "react": "18.2.0",
         "react-dom": "18.2.0",
