--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -37,4 +37,35 @@ jobs:
           push: true
           context: ./nextjs
           file: ./nextjs/Dockerfile
-          tags: ghcr.io/carrismetropolitana/website-nextjs:${{ github.ref_name }}
+          tags: ghcr.io/spginecologia/website-nextjs:${{ github.ref_name }}
+
+  # # # # # # # # # # # # # # # # # # # # #
+  # # # # # # # # # # # # # # # # # # # # #
+
+  website-backupd:
+    name: 'Build Docker Image (backupd)'
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build Docker Image - backupd
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          context: ./backupd
+          file: ./backupd/Dockerfile
+          tags: ghcr.io/spginecologia/website-backupd:${{ github.ref_name }}
