--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -30,7 +30,7 @@
         "mongoose": "8.0.0",
         "next": "14.0.2",
         "next-auth": "4.24.5",
-        "next-intl": "^2.22.1",
+        "next-intl": "2.22.1",
         "nodemailer": "6.9.7",
         "react": "18.2.0",
         "react-dom": "18.2.0",
