Updated to next-intl@3.0

--- a/nextjs/jsconfig.json
+++ b/nextjs/jsconfig.json
@@ -11,7 +11,8 @@
       "@/hooks/*": ["hooks/*"],
       "@/contexts/*": ["contexts/*"],
       "@/services/*": ["services/*"],
-      "@/schemas/*": ["schemas/*"]
+      "@/schemas/*": ["schemas/*"],
+      "@/translations/*": ["translations/*"]
     }
   }
 }
