--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -19,6 +19,8 @@
         "@mantine/modals": "7.2.2",
         "@mantine/next": "6.0.21",
         "@mantine/notifications": "7.2.2",
+        "@stripe/react-stripe-js": "2.4.0",
+        "@stripe/stripe-js": "2.2.0",
         "@tabler/icons-react": "2.42.0",
         "adm-zip": "0.5.10",
         "dayjs": "1.11.10",
@@ -30,21 +32,23 @@
         "mongoose": "8.0.1",
         "next": "14.0.3",
         "next-auth": "4.24.5",
-        "next-intl": "3.1.2",
+        "next-intl": "3.1.3",
         "nodemailer": "6.9.7",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-map-gl": "7.1.6",
         "react-virtualized-auto-sizer": "1.0.20",
-        "react-window": "1.8.9",
+        "react-window": "1.8.10",
+        "server-only": "0.0.1",
         "sharp": "0.32.6",
+        "stripe": "14.5.0",
         "swr": "2.2.4",
         "yup": "1.3.2"
     },
     "devDependencies": {
-        "@types/node": "20.9.3",
+        "@types/node": "20.9.4",
         "@types/react": "18.2.38",
-        "@types/react-dom": "18.2.16",
+        "@types/react-dom": "18.2.17",
         "eslint": "8.54.0",
         "eslint-config-next": "14.0.3",
         "postcss": "8.4.31",
