--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -3,57 +3,57 @@
     "version": "2023.11.13-0025",
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "dev": "next dev -p 3001",
         "bump": "node bump-version.js",
         "build": "next build",
         "start": "next start",
         "lint": "next lint"
     },
     "dependencies": {
-        "@auth/mongodb-adapter": "2.0.12",
-        "@mantine/core": "7.4.1",
-        "@mantine/dates": "7.4.1",
-        "@mantine/dropzone": "7.4.1",
-        "@mantine/form": "7.4.1",
-        "@mantine/hooks": "7.4.1",
-        "@mantine/modals": "7.4.1",
+        "@auth/mongodb-adapter": "2.5.1",
+        "@mantine/core": "7.7.0",
+        "@mantine/dates": "7.7.0",
+        "@mantine/dropzone": "7.7.0",
+        "@mantine/form": "7.7.0",
+        "@mantine/hooks": "7.7.0",
+        "@mantine/modals": "7.7.0",
         "@mantine/next": "6.0.21",
-        "@mantine/notifications": "7.4.1",
-        "@stripe/react-stripe-js": "2.4.0",
-        "@stripe/stripe-js": "2.3.0",
-        "@tabler/icons-react": "2.45.0",
-        "adm-zip": "0.5.10",
+        "@mantine/notifications": "7.7.0",
+        "@stripe/react-stripe-js": "2.6.2",
+        "@stripe/stripe-js": "3.1.0",
+        "@tabler/icons-react": "3.1.0",
+        "adm-zip": "0.5.12",
         "dayjs": "1.11.10",
         "formidable": "3.5.1",
         "inflected": "2.1.0",
         "lodash": "4.17.21",
-        "maplibre-gl": "3.6.2",
-        "mongodb": "6.3.0",
-        "mongoose": "8.0.4",
-        "next": "14.0.4",
-        "next-auth": "4.24.5",
-        "next-intl": "3.4.2",
-        "nodemailer": "6.9.8",
+        "maplibre-gl": "4.1.2",
+        "mongodb": "6.5.0",
+        "mongoose": "8.2.3",
+        "next": "14.1.4",
+        "next-auth": "4.24.7",
+        "next-intl": "3.10.0",
+        "nodemailer": "6.9.13",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-map-gl": "7.1.7",
-        "react-virtualized-auto-sizer": "1.0.20",
+        "react-virtualized-auto-sizer": "1.0.24",
         "react-window": "1.8.10",
-        "sharp": "0.33.2",
-        "stripe": "14.11.0",
-        "swr": "2.2.4",
-        "yup": "1.3.3"
+        "sharp": "0.33.3",
+        "stripe": "14.22.0",
+        "swr": "2.2.5",
+        "yup": "1.4.0"
     },
     "devDependencies": {
-        "@types/node": "20.11.0",
-        "@types/react": "18.2.47",
-        "@types/react-dom": "18.2.18",
-        "eslint": "8.56.0",
-        "eslint-config-next": "14.0.4",
-        "postcss": "8.4.33",
-        "postcss-preset-mantine": "1.12.3",
+        "@types/node": "20.11.30",
+        "@types/react": "18.2.73",
+        "@types/react-dom": "18.2.22",
+        "eslint": "8.57.0",
+        "eslint-config-next": "14.1.4",
+        "postcss": "8.4.38",
+        "postcss-preset-mantine": "1.13.0",
         "postcss-simple-vars": "7.0.1",
-        "typescript": "5.3.3"
+        "typescript": "5.4.3"
     },
     "overrides": {
         "next": "$next"
